@@ -6,7 +6,7 @@
 			<area x="0" y="79%" width="100%" height="18%" layer="1">
 				<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientReplayPNGT"/>
 			</area>
-			<area x="0" y="74%" width="100%" height="25%" layer="2">
+			<area x="0" y="{areaheight}*0.7407" width="100%" height="25%" layer="2">
 				<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsReplayControl1"/>
 			</area>
 	</background>
@@ -14,8 +14,8 @@
 	<backgroundmodeonly>
 	</backgroundmodeonly>
 
-	<!--<scrapercontent delay="500" shifttime="500" shifttype="left" shiftmode="slowed" >-->
-	<scrapercontent delay="500" fadetime="750" >
+	<scrapercontent delay="500" shifttime="500" shifttype="left" shiftmode="slowed" >
+	<!--<scrapercontent delay="0" fadetime="2000" >-->
 		<area condition="isset{posterpath}++{showReplayPoster}" x="0" y="45%" width="15%" height="34%" layer="1">
 			<drawimage imagetype="skinpart" path="posterReplayBG" width="{areawidth}" height="{areaheight}"/>
 		</area>
@@ -37,35 +37,35 @@
 	</rectitle>
 
 	<progressbar>
-		<area condition="not{timeshift}" x="9%" y="87%" width="82%" height="3%" layer="3">
-			<drawimage x="0" y="0" width="{current}/{total}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayProgress" />
+		<area debug="true" condition="not{timeshift}" x="9%" y="{areaheight}*0.8694" width="82%" height="{areaheight}*0.0287" layer="3">
+			<drawimage x="0" y="0" width="{current}/{total}*{areawidth}" height="{areaheight}" imagetype="skinpart" path="replayProgress" />
 		</area>
-		<area condition="{timeshift}" x="9%" y="87%" width="82%" height="3%" layer="3">
+		<area condition="{timeshift}" x="9%" y="{areaheight}*0.8704" width="82%" height="{areaheight}*0.0287" layer="3">
 			<drawimage x="0" y="20%" width="{total}/{timeshifttotal}*{areawidth}" height="60%" imagetype="skinpart" path="replayTimeshift" />
-			<drawimage x="0" y="0" width="{current}/{timeshifttotal}*{areawidth}" height="{areaheight}*0.98" imagetype="skinpart" path="replayProgress" />
+			<drawimage x="0" y="0" width="{current}/{timeshifttotal}*{areawidth}" height="{areaheight}" imagetype="skinpart" path="replayProgress" />
 		</area>
 	</progressbar>
 
 	<cutmarks>
-		<area condition="not{timeshift}" x="9%" y="87%" width="82%" height="3%" layer="4">
+		<area condition="not{timeshift}" x="9%" y="{areaheight}*0.8694" width="82%" height="{areaheight}*0.0287" layer="4">
 			<loop name="marks" x="0" y="0" orientation="absolute">
 				<!-- draw mark -->
 				<drawrectangle condition="not{marks[active]}" x="{marks[position]}/{marks[total]}*{areawidth}" y="0" width="1" height="100%" color="{clrBlack}" />
 				<!-- draw active mark -->
 				<drawrectangle condition="{marks[active]}" x="{marks[position]}/{marks[total]}*{areawidth}" y="0" width="2" height="100%" color="{clrGreen}" />
 				<!-- draw bar to next mark if mark is startmark-->
-				<drawrectangle condition="{marks[startmark]}" x="{marks[position]}/{marks[total]}*{areawidth}" y="40%" width="{marks[endposition]}/{marks[total]}*{areawidth} - {marks[position]}/{marks[total]}*{areawidth}" height="30%" color="{clrBlack}" />
+				<drawrectangle condition="{marks[startmark]}" x="{marks[position]}/{marks[total]}*{areawidth}" y="38%" width="{marks[endposition]}/{marks[total]}*{areawidth} - {marks[position]}/{marks[total]}*{areawidth}" height="30%" color="{clrBlack}" />
 			</loop>
 		</area>
 
-		<area condition="{timeshift}" x="9%" y="87%" width="82%" height="3%" layer="4">
+		<area condition="{timeshift}" x="9%" y="{areaheight}*0.8694" width="82%" height="{areaheight}*0.0287" layer="4">
 			<loop name="marks" x="0" y="0" orientation="absolute">
 				<!-- draw mark -->
 				<drawrectangle condition="not{marks[active]}" x="{marks[position]}/{marks[timeshifttotal]}*{areawidth}" y="0" width="1" height="100%" color="{clrBlack}" />
 				<!-- draw active mark -->
 				<drawrectangle condition="{marks[active]}" x="{marks[position]}/{marks[timeshifttotal]}*{areawidth}" y="0" width="2" height="100%" color="{clrGreen}" />
 				<!-- draw bar to next mark if mark is startmark-->
-				<drawrectangle condition="{marks[startmark]}" x="{marks[position]}/{marks[timeshifttotal]}*{areawidth}" y="37%" width="{marks[endposition]}/{marks[timeshifttotal]}*{areawidth} - {marks[position]}/{marks[timeshifttotal]}*{areawidth}" height="30%" color="{clrBlack}" />
+				<drawrectangle condition="{marks[startmark]}" x="{marks[position]}/{marks[timeshifttotal]}*{areawidth}" y="39%" width="{marks[endposition]}/{marks[timeshifttotal]}*{areawidth} - {marks[position]}/{marks[timeshifttotal]}*{areawidth}" height="30%" color="{clrBlack}" />
 			</loop>
 		</area>
 	</cutmarks>
