@@ -1,6 +1,9 @@
 shady-KISS-skin History
 -------------------------------------------
 
+2016-02-19:
+- Adjusted y-values in displayreplay, reverted last commit
+
 2016-02-18:
 - Changed scrapercontent in displayreplay from shifting to fading
 
